[package]
name = "munchmap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
eframe = "0.27"
egui = "0.27"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
urlencoding = "2"
webbrowser = "0.8"
